# mico

./: .gitignore
mico_new/: CMakeLists.txt  killsrv.sh  memcheck.sh  mico.conf  runsrv.sh
mico_new/Crypt/: CMakeLists.txt  MD5.cpp  MD5.h  a.out  makefile  tea.cpp  tea.h  test.cpp
mico_new/ExtConnSrv/: CMakeLists.txt  main.cpp  makefile  tagfile  tags
mico_new/LogicalSrv/: CMakeLists.txt  cacheduseroperator.cpp  cacheduseroperator.h  claimdevice.cpp  claimdevice.h  claimmanager.cpp  claimmanager.h  dbcolumn.h  deleteLocalCache.cpp  deleteLocalCache.h  deletedevicefromcluster.cpp  deletedevicefromcluster.h  deletenotifymessage.cpp  deletenotifymessage.h  devicelogin.cpp  devicelogin.h  deviceregister.cpp  deviceregister.h  feedback.cpp  feedback.h  fileuploadredis.cpp  fileuploadredis.h  forwardmessage.cpp  forwardmessage.h  gennotifyuseronlinestatus.cpp  gennotifyuseronlinestatus.h  getserverlist.cpp  getserverlist.h  getuserinfo.cpp  getuserinfo.h  iclaimmanager.h  imessageprocessor.h  imessagesender.h  isceneConnectDevicesOperator.h  iuseroperator.h  loginatanotherclientnotify.cpp  loginatanotherclientnotify.h  loginprocessor.cpp  loginprocessor.h  mailsender.cpp  (+58 more)
mico_new/Message/: Message.cpp  Message.h  MsgReader.cpp  MsgReader.h  MsgWriter.cpp  MsgWriter.h  Notification.cpp  Notification.h  itobytearray.cpp  itobytearray.h  relaymessage.cpp  relaymessage.h  tcpservermessage.cpp  tcpservermessage.h
mico_new/NotificationSrv/: BusinessManager.cpp  BusinessManager.h  CMakeLists.txt  NotifReqHandler.cpp  NotifReqHandler.h  main.cpp  mainqueue.cpp  mainqueue.h  makefile  notifyManager.cpp  notifyManager.h  notifyidgen.cpp  notifyidgen.h  notifytimeout.cpp  notifytimeout.h  posixMessageReceiveThread.cpp  posixMessageReceiveThread.h  queuemessage.cpp  queuemessage.h  tagfile  tags
mico_new/RelaySrv/: CMakeLists.txt  ChannelManager.cpp  ChannelManager.h  RelayReqHandler.cpp  RelayReqHandler.h  channelDatabase.cpp  channelDatabase.h  main.cpp  mainqueue.cpp  mainqueue.h  makefile  messagethread.cpp  messagethread.h  relayinternalmessage.cpp  relayinternalmessage.h  relayports.cpp  relayports.h  relaythread.cpp  relaythread.h  sessionRandomNumber.cpp  sessionRandomNumber.h  tagfile  tags  updatetags.sh  userdevicepair.h
mico_new/config/: configreader.cpp  configreader.h  dbconfig.h  mico.conf  shmconfig.h
mico_new/connectionserver/: CMakeLists.txt  connectionserver.cpp  connectionserver.h  connectionservermessage.cpp  connectionservermessage.h  connidgen.cpp  connidgen.h  logicalservers.cpp  logicalservers.h  main.cpp  serverqueue.cpp  serverqueue.h  serverslave.cpp  serverslave.h  tags  tcpclientmessage.cpp  tcpclientmessage.h  tcpconnection.cpp  tcpconnection.h  udpserver.cpp  udpserver.h  utilsock.cpp  utilsock.h
mico_new/dbproxy/: CMakeLists.txt  command.h  commandprocessor.cpp  commandprocessor.h  connection.cpp  connection.h  loadFromdb.cpp  loadFromdb.h  main.cpp  server.cpp  server.h  users.cpp  users.h
mico_new/dbproxyclient/: cacheddbuseroperator.cpp  cacheddbuseroperator.h  dbproxyclient.cpp  dbproxyclient.h  dbproxyclientpool.cpp  dbproxyclientpool.h
mico_new/delsceneserver/: CMakeLists.txt  main.cpp
mico_new/fcgi/: CMakeLists.txt  WXBizDataCrypt.cpp  WXBizMsgCrypt.h  common.h  execfcgi.sh  fcgi-bin  fcgiEnv.cpp  fcgiEnv.h  fcgiMain.cpp  log  memcheck.sh  retry.sh  tags  urlDecode  urlDecode.cpp  urlDecode.h
mico_new/hiredis/: tags
mico_new/logserver/: CMakeLists.txt  logread.cpp  logread.h  logserver.cpp  logserver.h  main.cpp
mico_new/msgqueue/: CMakeLists.txt  imem.h  ipcmsgqueue.cpp  ipcmsgqueue.h  makefile  memoryhash.cpp  memoryhash.h  msgqueue.h  msgqueuerm.cpp  posixmsgqueue.cpp  posixmsgqueue.h  procqueue.cpp  procqueue.h  shmmsgqueue.cpp  shmmsgqueue.h  shmwrap.cpp  shmwrap.h
mico_new/mysqlcli/: imysqlconnpool.h  mysqlconnection.cpp  mysqlconnection.h  mysqlconnpool.cpp  mysqlconnpool.h  sqlconnpara.h
mico_new/protocoldef/: protocol.cpp  protocol.h  protocolversion.cpp  protocolversion.h
mico_new/rabbitmq/: rbq.h
mico_new/redisconnectionpool/: redisconnectionpool.cpp  redisconnectionpool.h  redisconns.cpp  redisconns.h  redispoolmanager.cpp  redispoolmanager.h
mico_new/redispubsub/: CMakeLists.txt  main.cpp
mico_new/report/: CMakeLists.txt  main.cpp
mico_new/serverinfo/: serverid.cpp  serverid.h  serverinfo.cpp  serverinfo.h
mico_new/servermonitormaster/: CMakeLists.txt  genproto.sh  mainslave.cpp  rabbitmqservice.cpp  rabbitmqservice.h  registernodedetail.cpp  registernodedetail.h  runneraddscene.pb.cc  runneraddscene.pb.h  runneraddscene.proto  runneraddsceneclient.cpp  runneraddsceneclient.h  runneraddsceneimp.cpp  runneraddsceneimp.h  runnernodeinfo.h  runnernodemanager.cpp  runnernodemanager.h  runnerregister.pb.cc  runnerregister.pb.h  runnerregister.proto  runnerregisterclient.cpp  runnerregisterclient.h  runnerregisterserviceimp.cpp  runnerregisterserviceimp.h  runningscenemanager.cpp  runningscenemanager.h  scenerepo.cpp  scenerepo.h  scenerunner.cpp  scenerunner.h  scenerunnermanager.pb.cc  scenerunnermanager.pb.h  scenerunnermanager.proto  server.cpp  serverrpc.cpp  serverrpc.h  serverscenerunnermasterclient.cpp  serverscenerunnermasterclient.h  tags
mico_new/thread/: CMakeLists.txt  conditionwrap.cpp  conditionwrap.h  makefile  mutexguard.cpp  mutexguard.h  mutexwrap.cpp  mutexwrap.h  test.cpp  testpool  threadpool.cpp  threadpool.h  threadwrap.cpp  threadwrap.h
mico_new/timer/: TimeElapsed.h  clocktimer.cpp  clocktimer.h  timer.cpp  timer.h  timerserver.cpp  timerserver.h  wheeltimer.cpp  wheeltimer.h
mico_new/tools/: CMakeLists.txt  main.cpp  performancewatch.sh
mico_new/udpsession/: imessagerepeatchecker.h  messagerepeatchecker.cpp  messagerepeatchecker.h  udpsession.cpp  udpsession.h
mico_new/user/: user.cpp  user.h
mico_new/util/: a.out  base64.cpp  base64.h  datadecode.cpp  datadecode.h  formatsql.cpp  formatsql.h  logwriter.cpp  logwriter.h  makefile  micoassert.h  sharedptr.cpp  sharedptr.h  sock2string.cpp  sock2string.h  tags  tcpdatapack.cpp  tcpdatapack.h  testbase64.cpp  testtcppack.cpp  (+4 more)
(+527 files in other folders)
